--- a/tests/integration/etc/environment.php.dist
+++ b/tests/integration/etc/environment.php.dist
@@ -6,10 +6,7 @@
 $baseUrl = 'web';
 
 return [
-    'MAGENTO_CLOUD_VARIABLES' => base64_encode(json_encode([
-        'ADMIN_EMAIL' => 'admin@example.com',
-    ])),
-    'MAGENTO_CLOUD_RELATIONSHIPS' => base64_encode(json_encode([
+    'relationships' => [
         'database' => [
             0 => [
                 'host' => 'db',
@@ -19,8 +16,8 @@ return [
                 'port' => '3306',
             ],
         ],
-    ])),
-    'MAGENTO_CLOUD_ROUTES' => base64_encode(json_encode([
+    ],
+    'routes' => [
         "http://{$baseUrl}/" => [
             'type' => 'upstream',
             'original_url' => 'http://{default}',
@@ -29,6 +26,8 @@ return [
             'type' => 'upstream',
             'original_url' => 'https://{default}',
         ],
-    ])),
-    'MAGENTO_CLOUD_APPLICATION' => base64_encode(json_encode([])),
+    ],
+    'variables' => [
+        'ADMIN_EMAIL' => 'admin@example.com',
+    ],
 ];
