--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ services:
   - docker
 language: generic
 env:
+  global:
+    - DIR_TOOLS="/var/www/ece-tools"
   matrix:
     - TEST_SUITE=static-unit PHP=7.0 XDEBUG=true
     - TEST_SUITE=static-unit PHP=7.1 XDEBUG=true
@@ -19,7 +21,7 @@ before_install:
   - echo "COMPOSER_MAGENTO_USERNAME=${REPO_USERNAME}" >> ./docker/composer.env
   - echo "COMPOSER_MAGENTO_PASSWORD=${REPO_PASSWORD}" >> ./docker/composer.env
   - if [ $XDEBUG == "true" ]; then echo "PHP_ENABLE_XDEBUG=true" >> ./docker/global.env; fi;
-install: docker-compose -f docker-compose-${PHP}.yml run cli bash -c "composer install -n -d /var/www/magento"
+install: docker-compose -f docker-compose-${PHP}.yml run cli bash -c "composer install -n -d ${DIR_TOOLS}"
 before_script: docker-compose -f docker-compose-${PHP}.yml up -d --build
 script: ./tests/travis/script.sh
 after_failure: docker ps -s
