--- a/docker-compose-7.0.yml
+++ b/docker-compose-7.0.yml
@@ -54,8 +54,8 @@ services:
   appdata:
     image: tianon/true
     volumes:
-      - .:/var/www/magento
-      - /var/www/sandbox
+      - .:/var/www/ece-tools
+      - /var/www/magento
 
   dbdata:
     image: tianon/true
