--- a/docker-compose-7.1.yml
+++ b/docker-compose-7.1.yml
@@ -2,7 +2,7 @@ version: '2'
 services:
   fpm:
     hostname: fpm.magento2.docker
-    build: ./docker/7.0-fpm
+    image: magentodev/magento-cloud-docker-php:7.1-fpm
     ports:
       - 9000
     links:
@@ -15,12 +15,11 @@ services:
 
   cli:
     hostname: cli.magento2.docker
-    build: ./docker/7.0-cli
+    image: magentodev/magento-cloud-docker-php:7.1-cli
     links:
       - db
-#    This must be uncommented once std integration plan is removed
-#    volumes:
-#      - ~/.composer/cache:/root/.composer/cache
+    volumes:
+      - ~/.composer/cache:/root/.composer/cache
     volumes_from:
       - appdata
     env_file:
@@ -40,7 +39,7 @@ services:
       - MYSQL_PASSWORD=magento2
 
   web:
-    build: ./docker/nginx
+    image: magentodev/magento-cloud-docker-nginx:1.9
     ports:
       - "8080:80"
     links:
@@ -50,11 +49,13 @@ services:
       - appdata
     env_file:
       - ./docker/global.env
+      - ./docker/composer.env
 
   appdata:
     image: tianon/true
     volumes:
-      - .:/var/www/magento
+      - .:/var/www/ece-tools
+      - /var/www/magento
 
   dbdata:
     image: tianon/true
