MAGECLOUD-1501: Deploy Specific Locales per Theme

--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,8 @@
   },
   "autoload-dev": {
     "psr-4": {
-      "Magento\\MagentoCloud\\Test\\": "tests/static/"
+      "Magento\\MagentoCloud\\Test\\": "tests/static/",
+      "Magento\\MagentoCloud\\Test\\Integration\\": "tests/integration/"
     }
   },
   "scripts": {
