--- a/composer.json
+++ b/composer.json
@@ -3,10 +3,7 @@
   "description": "Provides tools to build and deploy Magento 2 Enterprise Edition",
   "type": "magento2-component",
   "version": "2002.0.11",
-  "license": [
-    "OSL-3.0",
-    "AFL-3.0"
-  ],
+  "license": "proprietary",
   "require": {
     "php": "^7.0",
     "composer/composer": "@stable",
