MAGECLOUD-2047: Add Variable to Configure Database Connection Settings

--- a/.magento.env.yaml.sample
+++ b/.magento.env.yaml.sample
@@ -279,7 +279,7 @@
 #                connection:                                                                                          #
 #                  default:                                                                                           #
 #                    username: user                                                                                   #
-#                    host: localhost                                                                                  #
+#                    host: host                                                                                       #
 #                    dbname: magento                                                                                  #
 #                    password: password                                                                               #
 #                    model: mysql4                                                                                    #
@@ -288,12 +288,12 @@
 #                    active: 1                                                                                        #
 #                  indexer:                                                                                           #
 #                    username: user_indexer                                                                           #
-#                    host: localhost                                                                                  #
+#                    host: host                                                                                       #
 #                    dbname: magento                                                                                  #
 #                    password: password                                                                               #
 #                slave_connection:                                                                                    #
 #                  default:                                                                                           #
-#                    host: slave.host:slave.port                                                                      #
+#                    host: slave.host                                                                                 #
 #                    username: slave.user                                                                             #
 #                    dbname: slave.name                                                                               #
 #                    password: slave.pswd                                                                             #
