MAGECLOUD-2047: Add Variable to Configure Database Connection Settings (#257)

--- a/.magento.env.yaml.sample
+++ b/.magento.env.yaml.sample
@@ -264,6 +264,44 @@
 #                  port: 6379                                                                                         #
 #                save: redis                                                                                          #
 #######################################################################################################################
+# DATABASE_CONFIGURATION - use to configure database connections. You must specify at least the default connection.   #
+#                         By default, the deployment process overwrites all settings in the env.php file.             #
+#                         In case when added option "_merge: true" setting are merging with default configuration.    #
+#                                                                                                                     #
+# Magento Version: Magento 2.1.4 and later                                                                            #
+# Default value: Not set                                                                                              #
+# Stages: deploy                                                                                                      #
+# Example:                                                                                                            #
+#          stage:                                                                                                     #
+#            deploy:                                                                                                  #
+#              DATABASE_CONFIGURATION:                                                                                #
+#                _merge: false # if true configuration merging with default                                           #
+#                connection:                                                                                          #
+#                  default:                                                                                           #
+#                    username: user                                                                                   #
+#                    host: host                                                                                       #
+#                    dbname: magento                                                                                  #
+#                    password: password                                                                               #
+#                    model: mysql4                                                                                    #
+#                    engine: innodb                                                                                   #
+#                    initStatements: 'SET NAMES utf8;'                                                                #
+#                    active: 1                                                                                        #
+#                  indexer:                                                                                           #
+#                    username: user_indexer                                                                           #
+#                    host: host                                                                                       #
+#                    dbname: magento                                                                                  #
+#                    password: password                                                                               #
+#                slave_connection:                                                                                    #
+#                  default:                                                                                           #
+#                    host: slave.host                                                                                 #
+#                    username: slave.user                                                                             #
+#                    dbname: slave.name                                                                               #
+#                    password: slave.pswd                                                                             #
+#                    model: mysql4                                                                                    #
+#                    engine: innodb                                                                                   #
+#                    initStatements: SET NAMES utf8                                                                   #
+#                    active: 1                                                                                        #
+#######################################################################################################################
 # WARM_UP_PAGES - customize the list of pages used to preload the cache in the post_deploy stage.                     #
 # Magento Version: Magento 2.1.4 and later                                                                            #
 # Default value: index.php                                                                                            #
@@ -299,6 +337,7 @@ stage:
       CRON_CONSUMERS_RUNNER: { }
       CACHE_CONFIGURATION: { }
       SESSION_CONFIGURATION: { }
+      DATABASE_CONFIGURATION: { }
   post-deploy:
       WARM_UP_PAGES:
           - "index.php"
