MAGECLOUD-2250: Add Docker config generator

--- a/composer.json
+++ b/composer.json
@@ -65,6 +65,14 @@
       [
         ".magento.env.yaml.sample",
         ".magento.env.yaml.sample"
+      ],
+      [
+        "dist/config.env",
+        "docker/config.env.dist"
+      ],
+      [
+        "dist/global.env",
+        "docker/global.env.dist"
       ]
     ]
   }
