--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     "psr/container": "^1.0",
     "psr/log": "^1.0",
     "symfony/console": "^2.6||^4.0",
-    "symfony/yaml": "^2.3||^3.3"
+    "symfony/yaml": "^2.3||^3.3",
+    "vlucas/phpdotenv": "^2.5"
   },
   "require-dev": {
     "php-mock/php-mock-phpunit": "^2.0",
@@ -67,12 +68,12 @@
         ".magento.env.yaml.dist"
       ],
       [
-        "dist/config.env",
-        "docker/config.env.dist"
+        "dist/config.php",
+        "docker/config.php.dist"
       ],
       [
         "dist/global.env",
-        "docker/global.env.dist"
+        "docker/global.php.dist"
       ]
     ]
   }
