MAGECLOUD-2359: Add User-Friendly Variables Management

--- a/composer.json
+++ b/composer.json
@@ -71,7 +71,7 @@
         "docker/config.php.dist"
       ],
       [
-        "dist/docker/global.env",
+        "dist/docker/global.php",
         "docker/global.php.dist"
       ]
     ]
