MAGECLOUD-2515: By Default Redis Setting 'disable_locking' Should be Enabled

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ before_install:
   - echo "COMPOSER_MAGENTO_PASSWORD=${REPO_PASSWORD}" >> ./docker/composer.env
   - if [ $XDEBUG == "true" ]; then echo "PHP_ENABLE_XDEBUG=true" >> ./docker/global.env; fi;
   - ./bin/ece-tools docker:build --test --php ${PHP}
-install: docker-compose -f docker-compose-${PHP}.yml run cli bash -c "composer install -n -d ${DIR_TOOLS}"
-before_script: docker-compose -f docker-compose-${PHP}.yml up -d --build
+install: docker-compose run cli bash -c "composer install -n -d ${DIR_TOOLS}"
+before_script: docker-compose up -d --build
 script: ./tests/travis/script.sh
 after_failure: docker ps -s
