MAGECLOUD-2515: By Default Redis Setting 'disable_locking' Should be Enabled

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,8 +26,9 @@ before_install:
   - echo "COMPOSER_MAGENTO_USERNAME=${REPO_USERNAME}" >> ./docker/composer.env
   - echo "COMPOSER_MAGENTO_PASSWORD=${REPO_PASSWORD}" >> ./docker/composer.env
   - if [ $XDEBUG == "true" ]; then echo "PHP_ENABLE_XDEBUG=true" >> ./docker/global.env; fi;
+  - composer update -n
   - ./bin/ece-tools docker:build --test --php ${PHP}
-install: docker-compose run cli bash -c "composer install -n -d ${DIR_TOOLS}"
+install: docker-compose run cli bash -c "composer update -n -d ${DIR_TOOLS}"
 before_script: docker-compose up -d --build
 script: ./tests/travis/script.sh
 after_failure: docker ps -s
