--- a/.travis.yml
+++ b/.travis.yml
@@ -26,9 +26,11 @@ before_install:
   - echo "COMPOSER_MAGENTO_USERNAME=${REPO_USERNAME}" >> ./docker/composer.env
   - echo "COMPOSER_MAGENTO_PASSWORD=${REPO_PASSWORD}" >> ./docker/composer.env
   - if [ $XDEBUG == "true" ]; then echo "PHP_ENABLE_XDEBUG=true" >> ./docker/global.env; fi;
+install:
   - composer update -n
   - ./bin/ece-tools docker:build --test --php ${PHP}
-install: docker-compose run cli bash -c "composer update -n -d ${DIR_TOOLS}"
-before_script: docker-compose up -d --build
+before_script:
+  - docker-compose run cli bash -c "composer update -n -d ${DIR_TOOLS}"
+  - docker-compose up -d --build
 script: ./tests/travis/script.sh
 after_failure: docker ps -s
