--- a/tests/integration/etc/environment.php.dist
+++ b/tests/integration/etc/environment.php.dist
@@ -28,8 +28,7 @@ return [
         ],
     ],
     'variables' => [
-        'ADMIN_EMAIL' => getenv('ADMIN_EMAIL', 'admin@example.com'),
-        'ADMIN_PASSWORD' => getenv('ADMIN_PASSWORD', '123123q'),
+        'ADMIN_EMAIL' => 'admin@example.com',
         'MIN_LOGGING_LEVEL' => getenv('MIN_LOGGING_LEVEL', \Magento\MagentoCloud\App\Logger::WARNING),
     ],
 ];
