MAGECLOUD-2627: Pass MIN_LOGGING_LEVEL to integration tests

--- a/tests/integration/etc/environment.php.dist
+++ b/tests/integration/etc/environment.php.dist
@@ -28,7 +28,7 @@ return [
         ],
     ],
     'variables' => [
-        'ADMIN_EMAIL' => getenv('ADMIN_EMAIL') ?? 'admin@example.com',
-        'MIN_LOGGING_LEVEL' => getenv('MIN_LOGGING_LEVEL') ?? \Magento\MagentoCloud\Config\Log::LEVEL_NOTICE,
+        'ADMIN_EMAIL' => getenv('ADMIN_EMAIL') ?: 'admin@example.com',
+        'MIN_LOGGING_LEVEL' => getenv('MIN_LOGGING_LEVEL') ?: \Magento\MagentoCloud\Config\Log::LEVEL_NOTICE,
     ],
 ];
