--- a/tests/integration/etc/environment.php.dist
+++ b/tests/integration/etc/environment.php.dist
@@ -29,6 +29,6 @@ return [
     ],
     'variables' => [
         'ADMIN_EMAIL' => 'admin@example.com',
-        'MIN_LOGGING_LEVEL' => \Magento\MagentoCloud\Config\Log::LEVEL_NOTICE,
+        'MIN_LOGGING_LEVEL' => \Magento\MagentoCloud\Config\Log::LEVEL_WARNING,
     ],
 ];
