--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
   "license": "proprietary",
   "require": {
     "php": "^7.0",
+    "ext-json": "*",
     "composer/composer": "@stable",
     "composer/semver": "^1.4",
     "graylog2/gelf-php": "^1.4.2",
