--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     "psr/container": "^1.0",
     "psr/log": "^1.0",
     "symfony/console": "^2.6||^4.0",
-    "symfony/yaml": "^2.3||^3.3"
+    "symfony/yaml": "^2.3||^3.3",
+    "twig/twig": "^2.5"
   },
   "require-dev": {
     "php-mock/php-mock-phpunit": "^2.0",
