MAGECLOUD-2575: Add Support for PHP Constants in .magento.env.yaml

--- a/src/Test/Unit/Config/Environment/_file/.magento-with-constants.env.yaml
+++ b/src/Test/Unit/Config/Environment/_file/.magento-with-constants.env.yaml
@@ -4,8 +4,8 @@ stage:
       connection:
         default:
           driver_options:
-            !php/const \PDO::MYSQL_ATTR_LOCAL_INFILE : 1
+            !php/const:\PDO::MYSQL_ATTR_LOCAL_INFILE : 1
         indexer:
           driver_options:
-            !php/const \PDO::MYSQL_ATTR_INIT_COMMAND : 1
+            !php/const:\PDO::MYSQL_ATTR_INIT_COMMAND : 1
       _merge: true
