--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,8 @@ addons:
 env:
   global:
     - DIR_TOOLS="/var/www/ece-tools"
+  - TEST_SUITE=static-unit
+  - TEST_SUITE=integration
 
 cache:
   apt: true
@@ -40,10 +42,10 @@ script: ./tests/travis/script.sh
 
 jobs:
   include:
-    - stage: Code quality
+    - stage: Test
       env: TEST_SUITE=static-unit XDEBUG=true
       php: '7.0'
-    - stage: Code quality
+    - stage: Test
       env: TEST_SUITE=static-unit XDEBUG=true
       php: '7.1'
     - stage: Integration
@@ -52,9 +54,5 @@ jobs:
     - stage: Integration
       env: TEST_SUITE=integration
       php: '7.1'
-
-stages:
-  - Code quality
-  - Integration
 
 after_failure: docker ps -s
