--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,9 @@ addons:
 env:
   global:
     - DIR_TOOLS="/var/www/ece-tools"
-  - TEST_SUITE=static-unit
-  - TEST_SUITE=integration
+  matrix:
+    - TEST_SUITE=static-unit
+    - TEST_SUITE=integration
 
 cache:
   apt: true
