--- a/composer.json
+++ b/composer.json
@@ -70,12 +70,8 @@
         ".magento.env.yaml.dist"
       ],
       [
-        "dist/docker/config.php",
-        "docker/config.php.dist"
-      ],
-      [
-        "dist/docker/global.php",
-        "docker/global.php.dist"
+        "dist/docker",
+        "docker"
       ]
     ]
   }
