MAGECLOUD-2577: Add possibility to import DB dump

--- a/composer.json
+++ b/composer.json
@@ -70,6 +70,10 @@
         ".magento.env.yaml.dist"
       ],
       [
+        "dist/Makefile",
+        "Makefile"
+      ],
+      [
         "dist/docker",
         "docker"
       ]
