--- a/composer.json
+++ b/composer.json
@@ -70,6 +70,18 @@
         ".magento.env.yaml.dist"
       ],
       [
+        "dist/Makefile",
+        "Makefile"
+      ],
+      [
+        "dist/docker/mnt",
+        "docker/mnt"
+      ],
+      [
+        "dist/docker/mysql",
+        "docker/mysql"
+      ],
+      [
         "dist/docker/config.php",
         "docker/config.php.dist"
       ],
