--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "psr/log": "^1.0",
     "symfony/console": "^2.6||^4.0",
     "symfony/yaml": "^2.3||^3.3",
-    "twig/twig": "^1.0"
+    "twig/twig": "^1.0||^2.0"
   },
   "require-dev": {
     "php-mock/php-mock-phpunit": "^2.0",
