--- a/composer.json
+++ b/composer.json
@@ -88,6 +88,10 @@
       [
         "dist/docker/global.php",
         "docker/global.php.dist"
+      ],
+      [
+        "dist/docker/README.md",
+        "docker/README.md"
       ]
     ]
   }
