--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,9 @@ before_install:
   - echo "COMPOSER_MAGENTO_USERNAME=${REPO_USERNAME}" >> ./docker/composer.env
   - echo "COMPOSER_MAGENTO_PASSWORD=${REPO_PASSWORD}" >> ./docker/composer.env
   - if [ $XDEBUG == "true" ]; then echo "PHP_ENABLE_XDEBUG=true" >> ./docker/global.env; fi;
+  - cp docker/config.php.dist docker/config.php
+  - cp docker/global.php.dist docker/global.php
+  - ./vendor/bin/ece-tools docker:config:convert
 
 install:
   - composer update -n --no-suggest
