--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
     "phpmd/phpmd": "@stable",
     "phpunit/php-code-coverage": "^5.2",
     "phpunit/phpunit": "^6.2",
-    "squizlabs/php_codesniffer": " ^3.0"
+    "squizlabs/php_codesniffer": " ^3.0",
+    "symfony/process": "^4.2"
   },
   "replace": {
     "magento/ece-patches": "*",
@@ -47,7 +48,8 @@
   "autoload-dev": {
     "psr-4": {
       "Magento\\MagentoCloud\\Test\\": "tests/static/",
-      "Magento\\MagentoCloud\\Test\\Integration\\": "tests/integration/"
+      "Magento\\MagentoCloud\\Test\\Integration\\": "tests/integration/",
+      "Magento\\MagentoCloud\\Test\\DockerIntegration\\": "tests/docker-integration/"
     }
   },
   "scripts": {
