--- a/docker/global.env
+++ b/docker/global.env
@@ -1,6 +1,6 @@
 MAGENTO_RUN_MODE=production
 PHP_MEMORY_LIMIT=2048M
 DEBUG=false
-ENABLE_SENDMAIL=true
+ENABLE_SENDMAIL=false
 UPLOAD_MAX_FILESIZE=64M
 MAGENTO_ROOT=/var/www/magento
