--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     "psr/container": "^1.0",
     "psr/log": "^1.0",
     "symfony/console": "^2.6||^4.0",
+    "symfony/serializer": "^4.2",
     "symfony/yaml": "^3.3",
     "twig/twig": "^1.0||^2.0"
   },
