--- a/composer.json
+++ b/composer.json
@@ -80,6 +80,10 @@
         "docker/mnt"
       ],
       [
+        "dist/docker/tmp",
+        "docker/tmp"
+      ],
+      [
         "dist/docker/mysql",
         "docker/mysql"
       ],
