MAGECLOUD-3502: Rewrite docker integration tests to functional tests using Codeception

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ env:
     - TEST_SUITE=static-unit XDEBUG=true
     - TEST_SUITE=integration
     - TEST_SUITE=docker-integration
+    - TEST_SUITE=docker-functional
 
 cache:
   apt: true
