--- a/composer.json
+++ b/composer.json
@@ -51,8 +51,7 @@
     "psr-4": {
       "Magento\\MagentoCloud\\Test\\": "tests/static/",
       "Magento\\MagentoCloud\\Test\\Integration\\": "tests/integration/",
-      "Magento\\MagentoCloud\\Test\\DockerIntegration\\": "tests/docker-integration/",
-      "Magento\\MagentoCloud\\Test\\DockerFunctional\\": "tests/docker-functional/"
+      "Magento\\MagentoCloud\\Test\\Functional\\": "tests/functional/"
     }
   },
   "scripts": {
