--- a/src/Test/Functional/Acceptance.suite.dist.yml
+++ b/src/Test/Functional/Acceptance.suite.dist.yml
@@ -1,6 +1,6 @@
 actor: CliTester
 modules:
   enabled:
-    - Magento\MagentoCloud\Test\DockerFunctional\Codeception\Docker
+    - Magento\MagentoCloud\Test\Functional\Codeception\Docker
     - PhpBrowser
     - Asserts
