--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ env:
   matrix:
     - TEST_SUITE=static-unit XDEBUG=true
     - TEST_SUITE=integration
-    - TEST_SUITE=docker-integration
+    - TEST_SUITE=functional
 
 cache:
   apt: true
