--- a/src/Test/Functional/Acceptance.suite.dist.yml
+++ b/src/Test/Functional/Acceptance.suite.dist.yml
@@ -2,5 +2,6 @@ actor: CliTester
 modules:
   enabled:
     - Magento\MagentoCloud\Test\Functional\Codeception\Docker
+    - Magento\MagentoCloud\Test\Functional\Codeception\MagentoDb
     - PhpBrowser
     - Asserts
