--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ before_script:
 
 script:
   - if [ $TEST_SUITE == "static-unit" ]; then ./tests/travis/static-unit.sh; fi
-  - if [ -n $REPO_USERNAME && $TEST_SUITE == "integration" ]; then ./tests/travis/integration.sh; fi
-  - if [ -n $REPO_USERNAME && $TEST_SUITE == "functional" ]; then ./tests/travis/functional.sh; fi
+  - if [ -n $REPO_USERNAME ] && [ $TEST_SUITE == "integration" ]; then ./tests/travis/integration.sh; fi
+  - if [ -n $REPO_USERNAME ] && [ $TEST_SUITE == "functional" ]; then ./tests/travis/functional.sh; fi
 
 after_failure: docker ps -s
