MAGECLOUD-3569: Improve UX by adding binary scripts

--- a/composer.json
+++ b/composer.json
@@ -117,6 +117,28 @@
         "dist/docker/bin/stop",
         "bin/stop"
       ]
+    ],
+    "chmod": [
+      {
+        "mask": "0755",
+        "path": "bin/bash"
+      },
+      {
+        "mask": "0755",
+        "path": "bin/build"
+      },
+      {
+        "mask": "0755",
+        "path": "bin/deploy"
+      },
+      {
+        "mask": "0755",
+        "path": "bin/start"
+      },
+      {
+        "mask": "0755",
+        "path": "bin/stop"
+      }
     ]
   }
 }
