--- a/.travis.yml
+++ b/.travis.yml
@@ -26,11 +26,8 @@ before_script:
   - if [ $XDEBUG == "true" ]; then echo "PHP_ENABLE_XDEBUG=true" >> ./docker/global.env; fi;
 
 script:
-  - echo $REPO_USERNAME
-  - echo $TRAVIS_SECURE_ENV_VARS
-  - echo $TRAVIS_PULL_REQUEST
   - if [ $TEST_SUITE == "static-unit" ]; then ./tests/travis/static-unit.sh; fi
-  - if [ -n $REPO_USERNAME ] && [ $TEST_SUITE == "integration" ]; then ./tests/travis/integration.sh; fi
-  - if [ -n $REPO_USERNAME ] && [ $TEST_SUITE == "functional" ]; then ./tests/travis/functional.sh; fi
+  - if [ $TRAVIS_SECURE_ENV_VARS == "true" ] && [ $TEST_SUITE == "integration" ]; then ./tests/travis/integration.sh; fi
+  - if [ $TRAVIS_SECURE_ENV_VARS == "true" ] && [ $TEST_SUITE == "functional" ]; then ./tests/travis/functional.sh; fi
 
 after_failure: docker ps -s
