MAGECLOUD-3467: Rewrite CronTest to use Cloud Docker (#481)
* MAGECLOUD-3467: Rewrite CronTest to use Cloud Docker

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 dist: trusty
+sudo: required
 
 git:
   depth: 1
@@ -24,6 +25,7 @@ before_script:
   - echo "COMPOSER_MAGENTO_USERNAME=${REPO_USERNAME}" >> ./docker/composer.env
   - echo "COMPOSER_MAGENTO_PASSWORD=${REPO_PASSWORD}" >> ./docker/composer.env
   - if [ $XDEBUG == "true" ]; then echo "PHP_ENABLE_XDEBUG=true" >> ./docker/global.env; fi;
+  - sudo /etc/init.d/mysql stop
 
 script:
   - if [ $TEST_SUITE == "static-unit" ]; then ./tests/travis/static-unit.sh; fi
