--- a/codeception.dist.yml
+++ b/codeception.dist.yml
@@ -33,3 +33,8 @@ modules:
         - /var/www/magento/app/etc
     PhpBrowser:
       url: "%Magento.docker.settings.env.url.base%"
+    Magento\MagentoCloud\Test\Functional\Codeception\MagentoDb:
+      dsn: "mysql:host=127.0.0.1;port=3306;dbname=%Magento.docker.settings.db.path%"
+      user: "%Magento.docker.settings.db.username%"
+      password: "%Magento.docker.settings.db.password%"
+      reconnect: true
